--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   <licenses>
     <license>
       <name>MIT</name>
+      <url>https://opensource.org/licenses/MIT</url>
     </license>
   </licenses>
   <organization>
