--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
   <description>Project skeleton to be used for Assignment 9 in course HBV202G Software Design and Construction</description>
   <licenses>
     <license>
-      <name>MIT</name>
-      <url>https://opensource.org/licenses/MIT</url>
+      <name>License</name>
+      <url>https://github.com/olp10/ass10/blob/7eb9353345eac469416a79d038be200c7a24fc88/LICENSE.md</url>
     </license>
   </licenses>
   <organization>
