--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
-          <mainClass>is.hi.hbv202g.ass9.composite.Main</mainClass>
+          <mainClass>is.hi.hbv202g.ass9.CompositeMain</mainClass>
         </configuration>
       </plugin>
     </plugins>
